--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ nav a:hover {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
   border: 1px dashed var(--chocoyo-dark-green);
-  border-radius: 10px;
+  /* border-radius: 10px; */
   /* box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.5), 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset */
 
   height: 940px;
