--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -312,10 +312,6 @@ footer {
   /* border: 1px solid #dddddd; */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-
   background-color: var(--chocoyo-dark-green);
   color: var(--chocoyo-yellow);
   border: 1px dashed var(--chocoyo-dark-green);
@@ -327,7 +323,7 @@ footer {
   margin-left: auto;
 }
 
-footer > h1 {
+footer1 > h1 {
   font-family: var(--header-font-family);
   color: white;
   font-size: 1.5rem;
