Minor card styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,20 +72,14 @@ nav a:hover {
   background-position: center;
   background-repeat: no-repeat;
 
-  /* border: 1px solid #dddddd; */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
   border: 1px dashed var(--chocoyo-dark-green);
-  /* border-radius: 10px; */
-  /* box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.5), 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset */
 
   height: 940px;
   width: var(--working-area);
   margin: auto;
 }
-
-/* main section div div.polaroid,
-main section.container div.project-card div.full img { */
 
 main section div div.polaroid {
   background-color: white;
@@ -95,8 +89,6 @@ main section div div.polaroid {
   width: 50%;
 }
 
-/* main section div div.label,
-main section.container div.project-card div.full h5 a { */
 main section div div.label {
   text-align: center;
   padding: 10px 20px;
@@ -104,14 +96,16 @@ main section div div.label {
 
 main section.container div.project-card div.full > a:hover,
 main section.container div.project-card div.split > a:hover {
-  /* box-shadow: 0 0 2px 1px var(--flower-orange); */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
     0 6px 20px 0 var(--chocoyo-dark-green);
 }
 
-/*
-  MAIN
-*/
+.card-custom {
+  background-color: var(--primary-color);
+  color: black;
+  margin: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
 /* FOOTER */
 footer {
